[project]
name = "cortexclaw"
version = "0.1.2"
description = "NanoClaw-inspired orchestrator on top of Cortex Code Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "cortex_code_agent_sdk",
    "aiosqlite>=0.20.0",
    "slack_bolt>=1.18.0",
    "croniter>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
cortexclaw = "cortexclaw.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cortexclaw*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
